<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".DashboardActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_principal"
        android:textAppearance="?attr/textAppearanceHeadlineMedium"
        android:layout_marginBottom="32dp"/>

    <Button
        android:id="@+id/btnOpenMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/abrir_mapa_riscos"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnOpenReportList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ver_lista_riscos"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnOpenStatistics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/relatorios_e_estatisticas"
        style="?attr/materialButtonOutlinedStyle" />

</LinearLayout>